maybe fix spacing?

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     padding: 0;
     font-family: "JetBrains Mono";
 }
+.introduction{
+    width: 95vw;
+}
 .container{
     width: 100%;
     height: 100vh;
@@ -33,7 +36,7 @@
 .Title{
     position:absolute;
     color:white;
-    top: 15%;
+    top: 10%;
     width: 100%;
     height: 20%;
     font-size: 350%;
@@ -41,7 +44,7 @@
 .Titlep1{
     position:absolute;
     color:white;
-    top: 10%;
+    top: 5%;
     width: 100%;
     height: 20%;
     font-size: 340%;
